--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
 </head>
 
 <body class="min-h-screen max-w-md bg-base-200 mx-auto">
-    <header class="border-2 border-gray-300">
+    <header class="border-2 border-gray-300 sticky top-0 bg-base-200 z-10">
         <section class="w-11/12 mx-auto py-3 flex justify-between items-center">
             <div class="left flex gap-1">
                 <div class="logo w-[60px]">
@@ -80,6 +80,64 @@
             </button>
         </div>
     </section>
+
+    <section id="add-money" class="w-11/12 mx-auto py-5">
+        <h1 class="text-3xl font-bold mb-5">Add Money</h1>
+        <div class="card bg-base-100 w-full shadow rounded-2xl">
+            <div class="card-body">
+                <fieldset class="fieldset">
+                    <label class="label text-[#080808] font-bold">Select a Bank</label>
+                    <select id="add-money-bank" class="select rounded-full bg-base-200 w-full">
+                        <option disabled selected> Select Bank</option>
+                        <option value="DBBL">DBBL</option>
+                        <option value="IBBL">IBBL</option>
+                        <option value="CITY">City Bank</option>
+                    </select>
+                    <br>
+
+                    <label class="label text-[#080808] font-bold">Bank Account Number</label>
+                    <input id="add-money-number" type="text" maxlength="11" minlength="11"
+                        class="input rounded-full bg-base-200 w-full" placeholder="Enter 11 digit bank number" />
+                    <br>
+                    <label class="label text-[#080808] font-bold">Amount to Add</label>
+                    <input id="add-money-amount" type="number" class="input rounded-full bg-base-200 w-full"
+                        placeholder="Add Amount to withdraw" />
+                    <br>
+                    <label class="label text-[#080808] font-bold">Pin Number</label>
+                    <input id="add-money-pin" type="password" maxlength="4" minlength="4"
+                        class="input rounded-full bg-base-200 w-full" placeholder="Enter 4 Digit Pin" />
+
+                    <button id="add-money-btn" class="btn btn-primary rounded-full mt-4">Add Money</button>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+
+    <section class="section w-11/12 mx-auto py-5">
+        <h1 class="text-3xl font-bold mb-5">Cashout</h1>
+        <div class="card bg-base-100 w-full shadow rounded-2xl">
+            <div class="card-body">
+                <fieldset class="fieldset">
+                    <label class="label text-[#080808] font-bold">Agent Number</label>
+                    <input id="cashout-number" type="text" maxlength="11" minlength="11"
+                        class="input rounded-full bg-base-200 w-full" placeholder="Enter 11 digit agent number" />
+                    <br>
+                    <label class="label text-[#080808] font-bold">Amount</label>
+                    <input id="cashout-amount" type="number" class="input rounded-full bg-base-200 w-full"
+                        placeholder="Enter Amount" />
+                    <br>
+                    <label class="label text-[#080808] font-bold">Pin Number</label>
+                    <input id="cashout-pin" type="password" maxlength="4" minlength="4"
+                        class="input rounded-full bg-base-200 w-full" placeholder="Enter 4 Digit Pin" />
+
+                    <button id="cashout-btn" class="btn btn-primary rounded-full mt-4">Withdraw Money</button>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+
+    <script src="machine.js"></script>
+    <script src="cashout.js"></script>
 </body>
 
 </html>
