transaction section complte

--- a/home.html
+++ b/home.html
@@ -54,11 +54,11 @@
         <p class="text-neutral/50">Enjoy easy and convenient financial services with us. Cashout charge is low and </p>
 
         <div class="button grid grid-cols-3 gap-3">
-            <button class="btn flex-col h-full py-6 btn-primary btn-soft">
+            <button onclick="showOne('add-money')" class="btn flex-col h-full py-6 btn-primary btn-soft">
                 <img src="./assets/opt-1.png" alt="">
                 <p>Add Money</p>
             </button>
-            <button class="btn flex-col h-full py-6 btn-primary btn-soft">
+            <button onclick="showOne('cashout')" class="btn flex-col h-full py-6 btn-primary btn-soft">
                 <img src="./assets/opt-2.png" alt="">
                 <p>Cashout</p>
             </button>
@@ -74,7 +74,7 @@
                 <img src="./assets/opt-5.png" alt="">
                 <p>Pay Bill</p>
             </button>
-            <button class="btn flex-col h-full py-6 btn-primary btn-soft">
+            <button onclick="showOne('history')" class="btn flex-col h-full py-6 btn-primary btn-soft">
                 <img src="./assets/opt-6.png" alt="">
                 <p>Transactions</p>
             </button>
@@ -113,7 +113,7 @@
         </div>
     </section>
 
-    <section class="section w-11/12 mx-auto py-5">
+    <section id="cashout" class="section w-11/12 mx-auto py-5">
         <h1 class="text-3xl font-bold mb-5">Cashout</h1>
         <div class="card bg-base-100 w-full shadow rounded-2xl">
             <div class="card-body">
@@ -136,7 +136,15 @@
         </div>
     </section>
 
+    <section id="history" class="section w-11/12 mx-auto py-5 space-y-5">
+        <h1 class="text-3xl font-bold mb-5">Transaction History</h1>
+        <div id="history-container">
+    
+        </div>
+    </section>
+
     <script src="machine.js"></script>
+    <script src="add_money.js"></script>
     <script src="cashout.js"></script>
 </body>
 
