bonus section complete

--- a/home.html
+++ b/home.html
@@ -62,11 +62,11 @@
                 <img src="./assets/opt-2.png" alt="">
                 <p>Cashout</p>
             </button>
-            <button class="btn flex-col h-full py-6 btn-primary btn-soft">
+            <button onclick="showOne('transfer-money')" class="btn flex-col h-full py-6 btn-primary btn-soft">
                 <img src="./assets/opt-3.png" alt="">
                 <p>Transfer Money</p>
             </button>
-            <button class="btn flex-col h-full py-6 btn-primary btn-soft">
+            <button onclick="showOne('get-bonus')" class="btn flex-col h-full py-6 btn-primary btn-soft">
                 <img src="./assets/opt-4.png" alt="">
                 <p>Get Bonus</p>
             </button>
@@ -135,6 +135,44 @@
             </div>
         </div>
     </section>
+    
+    <section id="transfer-money" class="section w-11/12 mx-auto py-5">
+        <h1 class="text-3xl font-bold mb-5">Transfer Money</h1>
+         <div class="card bg-base-100 w-full shadow rounded-2xl">
+            <div class="card-body">
+                <fieldset class="fieldset">
+                    <label class="label text-[#080808] font-bold">User Account Number</label>
+                    <input id="transfer-number" type="text" maxlength="11" minlength="11"
+                        class="input rounded-full bg-base-200 w-full" placeholder="Enter 11 digit  number" />
+                    <br>
+                    <label class="label text-[#080808] font-bold">Amount</label>
+                    <input id="transfer-amount" type="number" class="input rounded-full bg-base-200 w-full"
+                        placeholder="Enter amount to transfer" />
+                    <br>
+                    <label class="label text-[#080808] font-bold">Pin Number</label>
+                    <input id="transfer-pin" type="password" maxlength="4" minlength="4"
+                        class="input rounded-full bg-base-200 w-full" placeholder="Enter 4 Digit Pin" />
+
+                    <button id="transfer-btn" class="btn btn-primary rounded-full mt-4">Send Now</button>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+
+    <section id="get-bonus" class="section w-11/12 mx-auto py-5">
+        <h1 class="text-3xl font-bold mb-5">Get Bonus</h1>
+        <div class="card bg-base-100 w-full shadow rounded-2xl">
+            <div class="card-body">
+                <fieldset class="fieldset">
+                    <label class="label text-[#080808] font-bold">Enter Bonus Coupon</label>
+                    <input id="bonus-input" type="text" 
+                        class="input rounded-full bg-base-200 w-full" placeholder="Enter your coupon" />
+                    <br>
+                    <button id="bonus-btn" class="btn btn-primary rounded-full mt-4">Get Bonus</button>
+                </fieldset>
+            </div>
+        </div>
+    </section>
 
     <section id="history" class="section w-11/12 mx-auto py-5 space-y-5">
         <h1 class="text-3xl font-bold mb-5">Transaction History</h1>
@@ -143,9 +181,12 @@
         </div>
     </section>
 
+
     <script src="machine.js"></script>
     <script src="add_money.js"></script>
     <script src="cashout.js"></script>
+    <script src="transfer.js"></script>
+    <script src="bonous.js"></script>
 </body>
 
 </html>
