--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
                 <img src="./assets/opt-4.png" alt="">
                 <p>Get Bonus</p>
             </button>
-            <button class="btn flex-col h-full py-6 btn-primary btn-soft">
+            <button onclick="showOne('pay-bill')" class="btn flex-col h-full py-6 btn-primary btn-soft">
                 <img src="./assets/opt-5.png" alt="">
                 <p>Pay Bill</p>
             </button>
@@ -135,10 +135,10 @@
             </div>
         </div>
     </section>
-    
+
     <section id="transfer-money" class="section w-11/12 mx-auto py-5">
         <h1 class="text-3xl font-bold mb-5">Transfer Money</h1>
-         <div class="card bg-base-100 w-full shadow rounded-2xl">
+        <div class="card bg-base-100 w-full shadow rounded-2xl">
             <div class="card-body">
                 <fieldset class="fieldset">
                     <label class="label text-[#080808] font-bold">User Account Number</label>
@@ -165,8 +165,8 @@
             <div class="card-body">
                 <fieldset class="fieldset">
                     <label class="label text-[#080808] font-bold">Enter Bonus Coupon</label>
-                    <input id="bonus-input" type="text" 
-                        class="input rounded-full bg-base-200 w-full" placeholder="Enter your coupon" />
+                    <input id="bonus-input" type="text" class="input rounded-full bg-base-200 w-full"
+                        placeholder="Enter your coupon" />
                     <br>
                     <button id="bonus-btn" class="btn btn-primary rounded-full mt-4">Get Bonus</button>
                 </fieldset>
@@ -174,10 +174,41 @@
         </div>
     </section>
 
+    <section id="pay-bill" class="section w-11/12 mx-auto py-5">
+        <h1 class="text-3xl font-bold mb-5">Pay Bill</h1>
+        <div class="card bg-base-100 w-full shadow rounded-2xl">
+            <div class="card-body">
+                <fieldset class="fieldset">
+                    <label class="label text-[#080808] font-bold">Select To Pay</label>
+                    <select id="pay-bill-bank" class="select rounded-full bg-base-200 w-full">
+                        <option disabled selected>Select Bank</option>
+                        <option value="DBBL">DBBL</option>
+                        <option value="IBBL">IBBL</option>
+                        <option value="City Bank">City Bank</option>
+                    </select>
+                    <br>
+
+                    <label class="label text-[#080808] font-bold">Biller Account Number</label>
+                    <input id="biller-number" type="text" maxlength="11" minlength="11"
+                        class="input rounded-full bg-base-200 w-full" placeholder="Enter account number" />
+                    <br>
+                    <label class="label text-[#080808] font-bold">Amount to Pay</label>
+                    <input id="pay-amount" type="number" class="input rounded-full bg-base-200 w-full"
+                        placeholder="Add Amount to pay" />
+                    <br>
+                    <label class="label text-[#080808] font-bold">Pin Number</label>
+                    <input id="pay-bill-pin" type="password" maxlength="4" minlength="4"
+                        class="input rounded-full bg-base-200 w-full" placeholder="Enter 4 Digit Pin" />
+
+                    <button id="pay-bill-btn" class="btn btn-primary rounded-full mt-4">Pay Now</button>
+                </fieldset>
+            </div>
+        </div>
+    </section>
     <section id="history" class="section w-11/12 mx-auto py-5 space-y-5">
         <h1 class="text-3xl font-bold mb-5">Transaction History</h1>
         <div id="history-container">
-    
+
         </div>
     </section>
 
@@ -187,6 +218,7 @@
     <script src="cashout.js"></script>
     <script src="transfer.js"></script>
     <script src="bonous.js"></script>
+    <script src="pay_bill.js"></script>
 </body>
 
 </html>
